# ds-splat

./: .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  __version__.py  conanfile.py  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: 01_feature_request.yml
.github/workflows/: release.yml
cpp/: rasterizer_cuda.cu  rasterizer_kernels.cu  rasterizer_kernels.cuh  rasterizer_python.cpp  rasterizer_torch.cu
cpp/ds_cuda_rasterizer/: rasterizer_cuda.hpp  rasterizer_torch.hpp
cpp/gsplat/: backward.cu  backward.cuh  bindings.cu  bindings.h  sh.cuh
ds_splat/: __init__.py  rasterizer.py
tests/: rasterizer_test.cpp
